# openai-api-workshop

./: .env.example  README.md  attendee-handout.md  index.html  pyproject.toml  slides.html  speaker-notes.md
demo/: README.md  codex-prompts.md  pyproject.toml
demo/src/workshop_demo/: __init__.py  hack_idea.py  launch_pages.py  transcribe.py
