[project]
name = "codex-api-workshop-demo"
version = "0.1.0"
description = "Python demos for a Codex-first OpenAI API hackathon workshop"
authors = [{ name = "Cherry Research" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "openai>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
hack-idea = "workshop_demo.hack_idea:main"
transcribe-audio = "workshop_demo.transcribe:main"
workshop-pages = "workshop_demo.launch_pages:main"

[tool.poetry]
packages = [{ include = "workshop_demo", from = "demo/src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
